--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,8 @@
 {
   "trailingComma": "all",
-  "tabWidth": 2,
+  "tabWidth": 4,
   "semi": true,
-  "singleQuote": true,
+  "singleQuote": false,
   "printWidth": 100,
   "bracketSpacing": true,
   "bracketSameLine": true,
