--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,38 @@
 {
-  "compilerOptions": {
-    /* Language and Environment */
-    "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
+    "compilerOptions": {
+        /* Language and Environment */
+        "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
 
-    /* Modules */
-    "module": "ESNext" /* Specify what module code is generated. */,
-    "rootDir": "./src" /* Specify the root folder within your source files. */,
-    "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+        /* Modules */
+        "module": "ESNext" /* Specify what module code is generated. */,
+        "rootDir": "./src" /* Specify the root folder within your source files. */,
+        "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
 
+        /* Emit */
+        "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
+        "emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
+        "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+        "declarationDir": "types" /* Specify the output directory for generated declaration files. */,
+        "inlineSourceMap": true,
 
-    /* Emit */
-    "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
-    "emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
-    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
-    "declarationDir": "types" /* Specify the output directory for generated declaration files. */,
-    "inlineSourceMap": true,
-    
-    /* Interop Constraints */
-    "resolveJsonModule": true,
-    "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-    "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
+        /* Interop Constraints */
+        "resolveJsonModule": true,
+        "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
+        "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
 
-    /* Type Checking */
-    "strict": true /* Enable all strict type-checking options. */,
-    
-    /* Completeness */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  },
-  "exclude": ["**/__tests__", "**/*.test.ts*"]
+        /* Type Checking */
+        "strict": true /* Enable all strict type-checking options. */,
+
+        /* Completeness */
+        "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    },
+    "exclude": [
+        "node_modules",
+        "build",
+        "dist",
+        "coverage",
+        "src/stories/**",
+        "src/mock/**",
+        "src/__tests__/**"
+    ]
 }
