--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
         "emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
         "outDir": "./dist" /* Specify an output folder for all emitted files. */,
         "declarationDir": "types" /* Specify the output directory for generated declaration files. */,
-        "inlineSourceMap": true,
+        "sourceMap": true, /* Generates corresponding .map file. */
 
         /* Interop Constraints */
         "resolveJsonModule": true,
