--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,6 +29,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - run: npm i coverage-badges-cli -g
     - run: coverage-badges --output coverage/badges.svg
 
     - name: Deploy
