--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -30,11 +30,11 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     - run: npm i coverage-badges-cli -g
-    - run: coverage-badges --output coverage/badges.svg
+    - run: coverage-badges --output badges/badges.svg
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./coverage
+        publish_dir: ./badges
