--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,11 +28,8 @@
     },
     "exclude": [
         "node_modules",
-        "build",
         "dist",
         "coverage",
-        "src/stories/**",
-        "src/mock/**",
-        "src/__tests__/**"
+        "tests/**"
     ]
 }
